--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "underscore.string": "3.3.4",
     "uuid-validate": "0.0.2",
     "video.js": "5.16.0",
+    "videojs-resolution-switcher": "^0.4.2",
     "xhr": "2.3.3"
   },
   "devDependencies": {
