--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vendor"]
 	path = vendor
 	url = https://github.com/Madek/madek_webapp_vendor.git
+[submodule "test-media"]
+	path = spec/_support/test_media
+	url = https://github.com/Madek/madek-test-media
