--- a/cider-ci/context-components/lint/ruby-lint.yml
+++ b/cider-ci/context-components/lint/ruby-lint.yml
@@ -13,8 +13,11 @@
             export PATH=~/.rubies/$RUBY/bin:$PATH
             bundle exec cider-ci_flog -m app/ \
             -e app/controllers/oembed_controller.rb \
+            -e app/lib/embed_helper.rb \
             -e app/presenters/presenters/meta_data/meta_datum_edit.rb
             # NOTE: ↑ DEPRECATE_LICENSES
+            # oembed: disabled because its a mini-embedded-api (special case)
+            # embed helper: because the math has to go somewhere
 
     code-similarity:
       name: "Ruby: Code similarity with flay"
