--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-file-drop": "0.1.8",
     "react-waypoint": "5.1.0",
     "rusha": "0.8.3",
+    "tachyons": "^4.7.1",
     "underscore.string": "3.3.4",
     "uuid-validate": "0.0.2",
     "video.js": "5.16.0",
