--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "private": true,
   "scripts": {
     "start": "npm run -s watch",
-    "watch": "mkdir -p public/assets/bundles && npm run -s watch:app & npm run -s watch:server",
-    "build": "mkdir -p public/assets/bundles && npm run -s build:app && npm run -s build:server && npm run -s build:integration",
+    "watch": "mkdir -p public/assets/bundles && npm run -s watch:app & npm run -s watch:app-embedded-view & npm run -s watch:server",
+    "build": "mkdir -p public/assets/bundles && npm run -s build:app && npm run -s build:app-embedded-view && npm run -s build:server && npm run -s build:integration",
     "watch:app": "NODE_ENV=development watchify app/assets/javascripts/application.coffee -d -v -o public/assets/bundles/dev-bundle.js",
+    "watch:app-embedded-view": "NODE_ENV=development watchify app/assets/javascripts/embedded-view.js -d -v -o public/assets/bundles/dev-bundle-embedded-view.js",
     "watch:server": "NODE_ENV=development watchify app/assets/javascripts/react-server-side.js -d -v -o public/assets/bundles/dev-bundle-react-server-side.js",
     "build:app": "NODE_ENV=production browserify app/assets/javascripts/application.coffee -v -o public/assets/bundles/bundle.js",
+    "build:app-embedded-view": "NODE_ENV=production browserify app/assets/javascripts/embedded-view.js -v -o public/assets/bundles/bundle-embedded-view.js",
     "build:server": "NODE_ENV=production browserify app/assets/javascripts/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
     "build:integration": "NODE_ENV=production browserify app/assets/javascripts/integration-testbed.coffee -v -o public/assets/bundles/bundle-integration-testbed.js",
     "test": "npm run -s lint",
@@ -48,6 +50,7 @@
     "local-links": "1.4.1",
     "lodash": "4.17.4",
     "moment": "2.18.1",
+    "prop-types": "^15.6.1",
     "qs": "6.4.0",
     "react": "15.6.1",
     "react-bootstrap": "0.31.0",
@@ -81,7 +84,13 @@
     "coffee-reactify": "^5.1.0",
     "coffee-script": "^1.12.3",
     "coffeelint": "^1.16.0",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.7.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.4.0",
     "i18n-iso-countries": "^1.11.0",
+    "prettier": "1.10.2",
+    "prettier-eslint": "^8.2.1",
     "prettier-standard": "^6.0.0",
     "standard": "^10.0.2",
     "watchify": "^3.7.0"
@@ -112,5 +121,46 @@
       "type": "GNU GPLv3",
       "url": "http://www.gnu.org/copyleft/gpl.html"
     }
-  ]
+  ],
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true
+  },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "browser": true,
+      "commonjs": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 2016,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "impliedStrict": true,
+        "jsx": true,
+        "experimentalObjectRestSpread": true
+      }
+    },
+    "plugins": [
+      "prettier",
+      "react"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "prettier",
+      "prettier/react",
+      "prettier/standard",
+      "plugin:react/recommended"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error"
+      ],
+      "react/prop-types": "off"
+    }
+  }
 }
