fix: ui: API Tokens expired/revoked list
exired tokens were not listed together with revoked ones

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,10 @@ Style/VariableNumber:
   Exclude:
     - 'spec/**/*'
 
+Style/PredicateName:
+  Exclude:
+    - 'app/presenters/**/*'
+
 Lint/EndAlignment:
   AlignWith: variable
 
